--- a/intro.html
+++ b/intro.html
@@ -232,6 +232,19 @@
         </p>
       </section>
 
+      <!-- Funder Panel -->
+      <section class="panel">
+        <h2>Funding</h2>
+        <p>
+          This workshop was generously made possibly by the <a href="https://www.hudsonalpha.org/actg/" target="_blank">American Campus Tree Genomes 
+          Project</a> who sponsored the sequencing of the Hornbill used in these modules. We are very grateful for their support.
+        </p>
+
+        <p>
+          You can always return to this page by clicking <strong>Intro</strong>.
+        </p>
+      </section>
+      
     </section>
   </main>
 
