--- a/intro.html
+++ b/intro.html
@@ -260,8 +260,7 @@
         <p>
           This workshop was generously supported by the
           <a href="https://www.hudsonalpha.org/actg/" target="_blank">
-            American Campus Tree Genomes Project
-          </a>, who sponsored the sequencing of the hornbill used in these
+            American Campus Tree Genomes Project</a>, by sponsoring the sequencing of the hornbill used in these
           assembly modules. We are very grateful for their support.
         </p>
       </section>
