--- a/intro.html
+++ b/intro.html
@@ -258,10 +258,9 @@
       <section class="panel" id="funding">
         <h2>Funding &amp; Sponsorship</h2>
         <p>
-          This workshop was generously supported by the
-          <a href="https://www.hudsonalpha.org/actg/" target="_blank">
-            American Campus Tree Genomes Project</a>, by sponsoring the sequencing of the hornbill used in these
-          assembly modules. We are very grateful for their support.
+          This workshop was generously supported by the <a href="https://www.hudsonalpha.org/actg/" 
+          target="_blank">American Campus Tree Genomes Project</a>, by sponsoring the sequencing of the 
+          hornbill used in these assembly modules. We are very grateful for their support.
         </p>
       </section>
 
