--- a/intro.html
+++ b/intro.html
@@ -259,8 +259,7 @@
         <h2>Funding &amp; Sponsorship</h2>
         <p>
           This workshop was generously supported by the <a href="https://www.hudsonalpha.org/actg/" 
-          target="_blank">American Campus Tree Genomes Project</a>, by sponsoring the sequencing of the 
-          hornbill used in these assembly modules. We are very grateful for their support.
+          target="_blank">American Campus Tree Genomes Project</a>.
         </p>
       </section>
 
