--- a/intro.html
+++ b/intro.html
@@ -245,7 +245,7 @@
         <p>
           Use the tabs at the top of this page to move between the
           <strong>Intro</strong>, <strong>Workshop</strong> steps,
-          <strong>Terminology</strong> reference, <strong>Programs</strong>
+          <strong>Terminology</strong> Reference, <strong>Programs</strong>
           overview, and additional <strong>Links</strong>.
         </p>
 
