--- a/intro.html
+++ b/intro.html
@@ -174,7 +174,7 @@
   <main class="page">
 
     <header class="page-header">
-      <h1>Welcome to the ConGen2025 Assembly Workshop</h1>
+      <h1>Welcome to the ConGen2025 Assembly Workshop!</h1>
 
       <p>
         This page introduces the structure and flow of the genome assembly module
