--- a/workshop.html
+++ b/workshop.html
@@ -251,7 +251,10 @@
       border: 1px solid #86efac;         /* green border */
       border-radius: 12px;               /* rounded corners */
       padding: 1rem 1.25rem;             /* more padding */
-      margin: 1rem auto;                 /* centers the block */
+      margin: 1.25rem auto;     
+      display: block;           
+      width: fit-content;        /* shrink to text width */
+      max-width: 100%;
       font-family: ui-monospace, Menlo, Monaco, Consolas, "Courier New", monospace;
       font-size: 1rem;                   /* larger text */
       color: #065f46;                    /* dark green text */
@@ -266,7 +269,10 @@
       border: 1px solid #fca5a5;         /* red border */
       border-radius: 12px;
       padding: 1rem 1.25rem;
-      margin: 1rem auto;
+      margin: 1.25rem auto;     
+      display: block;           
+      width: fit-content;        /* shrink to text width */
+      max-width: 100%;
       font-family: ui-monospace, Menlo, Monaco, Consolas, "Courier New", monospace;
       font-size: 1rem;
       color: #991b1b;                    /* dark red text */
