--- a/workshop.html
+++ b/workshop.html
@@ -255,14 +255,12 @@
       background: #dcfce7;
       border: 1px solid #86efac;
       border-radius: 12px;
-      padding: 1rem 1.25rem;
-      margin: 1.25rem auto;     
-      display: inline-block;           
-      max-width: 100%;           /* prevent overflow */
+      padding: 1rem 1.5rem;
+      display: inline-block;    /* shrink to fit content so centering works */
+      max-width: 100%;
       font-family: ui-monospace, Menlo, Monaco, Consolas, "Courier New", monospace;
       font-size: 1.1rem;
       color: #065f46;
-      text-align: center;
       white-space: pre-wrap;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
 }
